2003-01-23  Hironori SAKAMOTO <hsaka@mth.biglobe.ne.jp>

	* [w3m-dev 03676] cleanup for pipe
	* etc.c (open_pipe_rw): added
	* file.c (uncompress_stream): rewrite using open_pipe_rw
	* image.c (openImgdisplay): rewrite using open_pipe_rw
	* local.c (localcgi_popen_rw): deleted
		(localcgi_post): rewrite using open_pipe_rw
	* proto.h (open_pipe_rw): added
	* search.c (migemor): initialized to NULL
		(migemow): initialized to NULL
		(migemo_pid): initialized to 0
		(open_migemo): rewrite using open_pipe_rw

2003-01-23  Hironori SAKAMOTO <hsaka@mth.biglobe.ne.jp>

	* [w3m-dev 03675] x-face
	* file.c (xface2xpm): use getImage()
		(readHeader): check same file
		(loadImageBuffer): rewrite
		(lessopen_stream): shell_quote()

2003-01-23  Hironori SAKAMOTO <hsaka@mth.biglobe.ne.jp>

	* [w3m-dev 03674] -dump problem
	* file.c (loadGeneralFile): return NULL when dump
	* main.c (dump_source): deleted
		(dump_head): deleted
		(dupm_extra): deleted
		(do_dump): added
		(main): singal when dump

2003-01-23  Yoshinobu Sakane <sakane@d4.bsd.nes.nec.co.jp>

	* [w3m-dev 03671] Re: config.param is clear when configure -help
	* configure: test -f config.param

2003-01-22  Hironori SAKAMOTO <hsaka@mth.biglobe.ne.jp>

	* [w3m-dev 03665] imlib2 support (on X11)
	* configure: X11 inline image with Imlib2
		fix typo in fb/imlib2
	* w3mimg/x11/x11_w3mimg.c: USE_IMLIB2
		(x11_load_image): USE_IMLIB2
		(x11_show_image): USE_IMLIB2
		(x11_free_image): USE_IMLIB2
		(x11_get_image_size): USE_IMLIB2

2003-01-22  Hironori SAKAMOTO <hsaka@mth.biglobe.ne.jp>

	* [w3m-dev 03664] config.param is clear when configure -help
	* configure: config.param created after arg parsing

2003-01-21  Fumitoshi UKAI  <ukai@debian.or.jp>

	* map.c (follow_map_menu): if USE_IMAGE or MENU_MAP
	* proto.h (follow_map_menu): ditto

2003-01-21  Hironori SAKAMOTO <hsaka@mth.biglobe.ne.jp>

	* [w3m-dev 03660] Re: fputs -> Strfputs
	* Str.h (Strncmp_charp): paren
		(Strncasecmp_charp): ditto
		(Strinsert): ditto